<resources>
    <string name="app_name">猜拳反應遊戲</string>
    <string name="start">遊戲開始</string>
    <string name="quit">遊戲結束</string>
    <string name="round">ROUND 1</string>
    <string name="state">88連擊!</string>
    <string name="paper">布</string>
    <string name="scissors">剪刀</string>
    <string name="rock">石頭</string>
    <string name="think">思考中......</string>
    <string name="time">00:00</string>
    <string name="hit">連擊!</string>
    <string name="hit_combo">HIT COMBO:</string>
    <string name="result">此次成績</string>
    <string name="ok">確定</string>
    <string name="exit">是否離開?</string>
    <string name="cancel">取消</string>
    <string name="P_WIN">請贏過我</string>
    <string name="P_LOSE">請輸給我</string>
    <string name="C_WIN">請讓我贏</string>
    <string name="C_LOSE">請讓我輸</string>
    <string name="EVEN">請跟我平手</string>
    <string name="NOT_EVEN">請不要平手</string>
    <string name="NOT_WIN">請不要贏我</string>
    <string name="NOT_LOSE">請不要輸我</string>
    <string name="sound_on">開啟音效</string>
    <string name="sound_off">關閉音效</string>
    <string name="about">關於</string>
    <string name="imrule">我是規則</string>
    <string name="easy_mode">簡單模式</string>

    <string name="how_to_play">這要怎麼玩?</string>
    <string name="title_activity_title">Title</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="return_to_title">是否回到主畫面？</string>
    <string name="exit_game">離開遊戲</string>
    <string name="hard_mode">困難模式</string>
    <string name="normal_mode">普通模式</string>
    <string name="demo_mode">展示模式</string>
    <string name="slow_mode">慢速模式</string>
    <string name="fast_mode">高速模式</string>

</resources>