<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Title2">
    <ImageView
        android:id="@+id/title_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/title" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:columnCount="4"
        android:rowCount="2"
        android:padding="3dp">

        <Button
            android:layout_row="0"
            android:layout_column="0"
            android:id="@+id/easy_mode"
            android:layout_width="wrap_content"
            android:text="慢速模式"
            >

        </Button>

        <Button
            android:layout_row="0"
            android:layout_column="1"
            android:id="@+id/normal_mode"
            android:text="@string/normal_mode"></Button>

        <Button
            android:layout_row="0"
            android:layout_column="2"
            android:id="@+id/hard_mode"
            android:text="@string/hard_mode"
            android:visibility="invisible"></Button>

        <Button
            android:layout_row="1"
            android:layout_column="0"
            android:id="@+id/demo"
            android:text="@string/demo_mode"></Button>

        <Button
            android:layout_row="1"
            android:layout_column="3"
            android:id="@+id/exit"
            android:text="@string/exit_game"></Button>
    </GridLayout>
</FrameLayout>