<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimaryDark">

        <ImageView
            android:id="@+id/computer_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"
            android:padding="@dimen/activity_vertical_margin"
            android:src="@drawable/scissors" />

        <TextView
            android:id="@+id/win_count_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|bottom"
            android:layout_marginLeft="6dp"
            android:gravity="center"
            android:padding="6dp"
            android:shadowColor="#000000"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="1.6"
            android:text="00"
            android:textAllCaps="true"
            android:textColor="#FFFF00"
            android:textSize="64sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/round_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_margin="6dp"
            android:gravity="center"
            android:text="@string/round"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/small_font_size"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/hit_count_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="6dp"
            android:gravity="center"
            android:padding="6dp"
            android:shadowColor="#000000"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="1.6"
            android:text="@string/state"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            android:textStyle="bold|italic">

        </TextView>


        <TextView
            android:id="@+id/hit_combo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom"
            android:layout_marginRight="6dp"
            android:gravity="center"
            android:padding="6dp"
            android:shadowColor="#000000"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="1.6"
            android:text="hit combo:\n00"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:textStyle="bold|italic">

        </TextView>

    </FrameLayout>


    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/start_btn"
            style="@style/ButtonStyle_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/start" />

        <Button
            android:id="@+id/quit_btn"
            style="@style/ButtonStyle_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/quit" />
    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_layout"
        android:layout_below="@+id/title_layout"
        android:gravity="center"
        android:orientation="vertical">
        <GridLayout
            android:id="@+id/grid_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:columnCount="2"
            android:rowCount="2"
            android:useDefaultMargins="true">

            <ImageButton
                android:id="@+id/scissors_ibn"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_gravity="center"
                android:elevation="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/scissors"
                android:contentDescription="TODO" />

            <ImageButton
                android:id="@+id/rock_ibn"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_row="1"
                android:layout_column="0"
                android:elevation="10dp"
                android:padding="12dp"
                android:scaleType="fitCenter"
                android:src="@drawable/rock" />

            <ImageButton
                android:id="@+id/paper_ibn"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_row="1"
                android:layout_column="1"
                android:elevation="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/paper" />
        </GridLayout>
        <TextView
            android:id="@+id/count_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/super_large_font_size"
            android:layout_marginLeft="8dp"
            android:text="" />
        <TextView
            android:id="@+id/rule_text"
            android:layout_gravity="center|top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40dp"
            android:text="@string/imrule" />
        <TextView
            android:id="@+id/life_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textSize="40dp"
            android:text="HP:  " />
        <TextView
            android:id="@+id/stage_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:textSize="40dp"
            android:text="0" />

        <TextView
            android:id="@+id/big_counter_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="3"
            android:textSize="168sp"
            android:textStyle="italic"
            android:typeface="sans">


        </TextView>


        <TextView
            android:id="@+id/heart_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:text="♥♥♥"
            android:textColor="#FF0000"
            android:textSize="@dimen/midden_font_size">

        </TextView>





    </FrameLayout>


</RelativeLayout>